--- a/cv.html
+++ b/cv.html
@@ -10,94 +10,103 @@
 </head>
  
 <body class="home">
- 
-  <header class="header">
-    <div class="header-flex">
-        <div class="col-12 col-md-4 mb-3 mb-md-0">
-            <img src="docs/jovabg.jpg" class="img-fluid rounded-circle" alt="smile" style="max-width: 150px;">
-        </div>
-      <h1 class="header-logo">Bernez Jovany</h1>
-      <nav class="no-mobile">
-      <a href="https://jovanyb.mondouvert.com/" class="current">Mon portofolio</a> •
-      <a href="#">jovany.bernez@gmail.com</a> •
-      <a href="https://www.linkedin.com/in/jovany-bernez/">Mon Linkedin</a> 
-      <a href="blog.html">Mon blog</a>
-      </nav>
-      <nav class="mobile">
-        <a href="#footer-nav">≡</a>
-      </nav>
+    <div class="sidebar">
+        <a href="https://jovanyb.mondouvert.com/">Mon portfolio</a>
+        <a href="https://www.linkedin.com/in/jovany-bernez/">Linkedin</a>
+        <a href="blog.html">Mon blog</a>
+        <a href="https://www.tiktok.com/@toman.jo?_t=8pIe66wFBfU&_r=1">TikTok</a>
+        <a href="mailto:jovany.bernez@gmail.com">Email</a>
     </div>
-  </header>
- 
-  <div class="grid">
-    <div class="about">Formation développeur Web et Web mobile<em>ESRP Beauvoir</em>.<br>
-      <br>
-       Actuellement à la recherche d’un <strong>emploi</strong> sur Paris, Orléans ou Rénnes.</div>
 
-       <div class="row mt-4">
-        <div class="col-12 col-lg-6 mb-4">
-            <h2 class="h4 mb-3">Atouts</h2>
-            <ul class="list-group">
-                <li class="list-group-item">Travail d'équipe</li>
-                <li class="list-group-item">Bienveillant</li>
-                <li class="list-group-item">Autodérision</li>
-                <li class="list-group-item">Capacité d’écoute</li>
-                <li class="list-group-item">Fiabilité</li>
-            </ul>
-            <h2 class="h4 mt-4 mb-3">Diplômes et formations</h2>
-            <ul class="list-group">
-                <li class="list-group-item">BAC STG GSI - Lycée Benjamen Franklin, Orléans (2011)</li>
-                <li class="list-group-item">Licence Langue et Civilisation étrangère - UFR LLSH, Orléans (2012-2015)</li>
-                <li class="list-group-item">Formation Community Manager - Openclassroom (2018)</li>
-                <li class="list-group-item">Certification Tosa Wordpress - Note 750/1000, Evry-Courcouronnes (2023)</li>
-            </ul>
-            <h2 class="h4 mt-4 mb-3">Expériences Professionnelles</h2>
-            <ul class="list-group">
-                <li class="list-group-item">Stagiaire développeur Web - CRP Beauvoir, Evry (Novembre 2023)</li>
-                <li class="list-group-item">Stagiaire développeur Web - CRP Beauvoir, Evry (janvier-Février 2024)</li>
-                <li class="list-group-item">Stagiaire développeur Web - CRP Beauvoir, Evry (2024)</li>
-            </ul>
-        </div>
-        <div class="col-12 col-lg-6">
-            <h2 class="h4 mb-3">Compétences</h2>
-            <!-- For each skill, use progress bars -->
-            <p>HTML, CSS</p>
-            <div class="progress mb-3">
-                <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="main-content">
+        <header class="header">
+            <div class="header-flex">
+                <div class="col-12 col-md-4 mb-3 mb-md-0">
+                    <img src="docs/jovabg.jpg" class="img-fluid rounded-circle" alt="smile" style="max-width: 150px;">
+                </div>
+            <h1 class="header-logo">Bernez Jovany</h1>
+            <nav class="no-mobile">
+            <a href="#" class="current"></a> •
+            <a href="#"></a> •
+            <a href="#"></a> 
+            <a href="#"></a>
+            </nav>
+            <nav class="mobile">
+                <a href="#footer-nav">≡</a>
+            </nav>
             </div>
-            <p>PHP, MySQL</p>
-            <div class="progress mb-3">
-                <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p>Wordpress</p>
-            <div class="progress mb-3">
-                <div class="progress-bar" role="progressbar" style="width: 92%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p>MongoDB, NodeJs, Oracle (compétences futures)</p>
-            <div class="progress mb-3">
-                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <p>UML, Star UML, Figma</p>
-            <div class="progress mb-3">
-                <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+        </header>
+    
+    <div class="grid">
+        <div class="about">Formation développeur Web et Web mobile<em>ESRP Beauvoir</em>.<br>
+        <br>
+        Actuellement à la recherche d’un <strong>emploi</strong> sur Paris, Orléans ou Rénnes.</div>
 
-
-
-            <h2 class="h4 mt-4 mb-3">Langues</h2>
-            <p>Français - Natif</p>
-            <p>Anglais - Courant</p>
-            <p>Espagnol - Intermédiaire</p>
-            <div class="mt-4">
-                <h2 class="h4 mb-3">Centres d'intérêt</h2>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Manger</li>
-                    <li class="list-group-item">Dormir</li>
-                    <li class="list-group-item">Publier des trolls sur Facebook</li>
-                    <li class="list-group-item">Construire les jouets des Kinder Surprises</li>
-                    <li class="list-group-item">Faire des batailles de regards avec des inconnus dans la rue</li>
-                    <li class="list-group-item">Intérêt pour les nouvelles technologies</li>
+        <div class="row mt-4">
+            <div class="col-12 col-lg-6 mb-4">
+                <h2 class="h4 mb-3">Atouts</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">Travail d'équipe</li>
+                    <li class="list-group-item">Bienveillant</li>
+                    <li class="list-group-item">Autodérision</li>
+                    <li class="list-group-item">Capacité d’écoute</li>
+                    <li class="list-group-item">Fiabilité</li>
                 </ul>
+                <h2 class="h4 mt-4 mb-3">Diplômes et formations</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">BAC STG GSI - Lycée Benjamen Franklin, Orléans (2011)</li>
+                    <li class="list-group-item">Licence Langue et Civilisation étrangère - UFR LLSH, Orléans (2012-2015)</li>
+                    <li class="list-group-item">Formation Community Manager - Openclassroom (2018)</li>
+                    <li class="list-group-item">Certification Tosa Wordpress - Note 750/1000, Evry-Courcouronnes (2023)</li>
+                </ul>
+                <h2 class="h4 mt-4 mb-3">Expériences Professionnelles</h2>
+                <ul class="list-group">
+                    <li class="list-group-item">Stagiaire développeur Web - CRP Beauvoir, Evry (Novembre 2023)</li>
+                    <li class="list-group-item">Stagiaire développeur Web - CRP Beauvoir, Evry (janvier-Février 2024)</li>
+                    <li class="list-group-item">Stagiaire développeur Web - CRP Beauvoir, Evry (2024)</li>
+                </ul>
+            </div>
+            <div class="col-12 col-lg-6">
+                <h2 class="h4 mb-3">Compétences</h2>
+                <!-- For each skill, use progress bars -->
+                <p>HTML, CSS</p>
+                <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>PHP, MySQL</p>
+                <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>Wordpress</p>
+                <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 92%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>MongoDB, NodeJs, React, Js</p>
+                <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <p>UML, Star UML, Figma</p>
+                <div class="progress mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 78%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+
+
+                <h2 class="h4 mt-4 mb-3">Langues</h2>
+                <p>Français - Natif</p>
+                <p>Anglais - Courant</p>
+                <p>Espagnol - Intermédiaire</p>
+                <div class="mt-4">
+                    <h2 class="h4 mb-3">Centres d'intérêt</h2>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Manger</li>
+                        <li class="list-group-item">Dormir</li>
+                        <li class="list-group-item">Publier des trolls sur Facebook</li>
+                        <li class="list-group-item">Construire les jouets des Kinder Surprises</li>
+                        <li class="list-group-item">Faire des batailles de regards avec des inconnus dans la rue</li>
+                        <li class="list-group-item">Intérêt pour les nouvelles technologies</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
