--- a/cv.html
+++ b/cv.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Laurène Ipsum, étudiante en graphisme - portfolio </title>
+  <title>CV Jovany B </title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"/
   <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
  
 <body class="home">
     <div class="sidebar">
-        <a href="https://jovanyb.mondouvert.com/">Mon portfolio</a>
-        <a href="https://www.linkedin.com/in/jovany-bernez/">Linkedin</a>
-        <a href="blog.html">Mon blog</a>
-        <a href="https://www.tiktok.com/@toman.jo?_t=8pIe66wFBfU&_r=1">TikTok</a>
-        <a href="mailto:jovany.bernez@gmail.com">Email</a>
+        <a href="https://jovanyb.mondouvert.com/"><i class="fas fa-briefcase"></i><span class="sidebar-text">Mon portfolio</span></a>
+        <a href="https://www.linkedin.com/in/jovany-bernez/"><i class="fab fa-linkedin"></i><span class="sidebar-text">Linkedin</span></a>
+        <a href="blog.html"><i class="fas fa-blog"></i><span class="sidebar-text">Mon blog</span></a>
+        <a href="https://www.tiktok.com/@toman.jo?_t=8pIe66wFBfU&_r=1"><i class="fab fa-tiktok"></i><span class="sidebar-text">TikTok</span></a>
+        <a href="mailto:jovany.bernez@gmail.com"><i class="fas fa-envelope"></i><span class="sidebar-text">Email</span></a>
     </div>
 
         <div class="main-content">
@@ -23,8 +25,9 @@
             <div class="header-flex">
                 <div class="col-12 col-md-4 mb-3 mb-md-0">
                     <img src="docs/jovabg.jpg" class="img-fluid rounded-circle" alt="smile" style="max-width: 150px;">
+                    <h1 class="header-logo">Bernez Jovany</h1>
                 </div>
-            <h1 class="header-logo">Bernez Jovany</h1>
+            
             <nav class="no-mobile">
             <a href="#" class="current"></a> •
             <a href="#"></a> •
@@ -46,6 +49,7 @@
             <div class="col-12 col-lg-6 mb-4">
                 <h2 class="h4 mb-3">Atouts</h2>
                 <ul class="list-group">
+                    <img src="docs/jovabg.jpg" alt="Jovany" class="sidebar-img">
                     <li class="list-group-item">Travail d'équipe</li>
                     <li class="list-group-item">Bienveillant</li>
                     <li class="list-group-item">Autodérision</li>
